--- a/index.vCanvas.html
+++ b/index.vCanvas.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Canvas</title>
+  <title>Canvas version</title>
 </head>
 <body>
   <button id="btn" onclick="addImage()">Drop icon</button>
